ingress/deployment-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  deployment-ingress
  labels:
    app:  nginx-ingress
spec:
  selector:
    matchLabels:
      app: nginx-ingress
  replicas: 1
  template:
    metadata:
      labels:
        app:  nginx-ingress
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  deployment-ingress
        image:  nginx:alpine
        resources:
          requests:
            cpu: 10m
            memory: 10Mi
          limits:
            cpu: 10m
            memory: 10Mi
        ports:
        - containerPort:  80
