ingress/pod-ingress.yml
apiVersion: v1
kind: Pod
metadata:
  name: ingress-pod
  labels:
    app: nginx-ingress
spec:
  containers:
  - name: ingress-pod
    image: nginx:alpine
    resources:
      limits:
        cpu: 10m
        memory: 10Mi
      requests:
        cpu: 10m
        memory: 10Mi
    ports:
    - containerPort:  80
