ingress/service-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: service-ingress
spec:
  selector:
    app: nginx-ingress
  ports:
  - name: service-ingress
    protocol: TCP
    port: 80
    targetPort: 80
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
  type: ClusterIP
