ingress/ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:  
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: simple-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-ingress
            port:
              number: 80
